--- a/order.yml
+++ b/order.yml
@@ -3,7 +3,7 @@ spring:
     name: order
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    username: root
+    username: root123
     password: root
     url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
 eureka:
