--- a/order-test.yml
+++ b/order-test.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: root123
+    password: root
     url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
 env: 
  test
