--- a/order.yml
+++ b/order.yml
@@ -1,15 +1,15 @@
-spring:
-  application:
-    name: order
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root123
-    password: root
-    url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8762/eureka/
-  instance:
-    lease-renewal-interval-in-seconds: 1
-    lease-expiration-duration-in-seconds: 2
+# spring:
+#   application:
+#     name: order
+#   datasource:
+#     driver-class-name: com.mysql.jdbc.Driver
+#     username: root123
+#     password: root
+#     url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
+# eureka:
+#   client:
+#     service-url:
+#       defaultZone: http://localhost:8762/eureka/
+#   instance:
+#     lease-renewal-interval-in-seconds: 1
+#     lease-expiration-duration-in-seconds: 2
