--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,4 +1,9 @@
 spring:
+  rabbitmq:
+    addresses: localhost
+    host: 5672
+    username: guest
+    password: guest
   application:
     name: order
   datasource:
