--- a/order-dev.yml
+++ b/order-dev.yml
@@ -4,7 +4,9 @@ spring:
     host: 5672
     username: guest
     password: guest
-
+  redis:
+    host: localhost
+    port: 6379
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
