--- a/product-dev.yml
+++ b/product-dev.yml
@@ -9,5 +9,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
-    
+  redis:
+    host: localhost
+    port: 6379
 env: dev123
